--- a/contact-us.html
+++ b/contact-us.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/-product-features.css">
     <link rel="stylesheet" href="assets/css/Animated-Type-Heading.css">
     <link rel="stylesheet" href="assets/css/best-carousel-slide.css">
@@ -27,6 +28,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css">
     <link rel="stylesheet" href="assets/css/Landing-Page---Parallax-Background---Logo-Heading-ButtonGIF-1.css">
     <link rel="stylesheet" href="assets/css/Landing-Page---Parallax-Background---Logo-Heading-ButtonGIF-2.css">
     <link rel="stylesheet" href="assets/css/Landing-Page---Parallax-Background---Logo-Heading-ButtonGIF.css">
@@ -37,6 +40,8 @@
     <link rel="stylesheet" href="assets/css/Pretty-Footer.css">
     <link rel="stylesheet" href="assets/css/Sakae-Curved-Header.css">
     <link rel="stylesheet" href="assets/css/Sammy-Timeline.css">
+    <link rel="stylesheet" href="assets/css/Slick-Slider-2-1.css">
+    <link rel="stylesheet" href="assets/css/Slick-Slider-2.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
     <link rel="stylesheet" href="assets/css/Team-with-rotating-cards.css">
     <link rel="stylesheet" href="assets/css/Team.css">
@@ -53,7 +58,7 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html" style="font-family: 'EB Garamond', serif;">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="features.html" style="font-family: 'EB Garamond', serif;">Events</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="slider-2.html" style="font-family: 'EB Garamond', serif;">Gallery</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="gallery.html" style="font-family: 'EB Garamond', serif;">Gallery</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="slider.html" style="font-family: 'EB Garamond', serif;">Achievements</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about-us.html" style="font-family: 'EB Garamond', serif;">Execom</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="contact-us.html" style="font-family: 'EB Garamond', serif;">Contact Us</a></li>
@@ -154,69 +159,72 @@
                 </div>
             </section>
             <section class="getintouch">
-                <div class="container modern-form">
+                <div class="container modern-form" style="width: 355px;">
                     <div class="text-center">
-                        <h4 style="color: #212529;font-size: 45px;font-family: 'EB Garamond', serif;">Get in touch</h4>
-                    </div>
-                    <div class="modern-form__form-container">
-                        <form>
+                        <h4 style="color: #212529;font-size: 45px;font-family: 'EB Garamond', serif;">Get in touch<i class="fa fa-envelope"></i></h4>
+                        <form id="contactForm-1" action="javascript:void(0);" method="get"><input class="form-control" type="hidden" name="Introduction" value="This email was sent from www.awebsite.com"><input class="form-control" type="hidden" name="subject" value="Awebsite.com Contact Form"><input class="form-control"
+                                type="hidden" name="to" value="email@awebsite.com">
                             <div class="form-row">
-                                <div class="col col-contact">
-                                    <div class="form-group modern-form__form-group--padding-r"><input class="form-control input input-tr" type="text" placeholder="First Name" style="font-family: 'EB Garamond', serif;">
-                                        <div class="line-box">
-                                            <div class="line"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col col-contact">
-                                    <div class="form-group modern-form__form-group--padding-l"><input class="form-control input input-tr" type="text" placeholder="Email" style="font-family: 'EB Garamond', serif;">
-                                        <div class="line-box">
-                                            <div class="line"></div>
-                                        </div>
-                                    </div>
+                                <div class="col-md-6">
+                                    <div id="successfail-1"></div>
                                 </div>
                             </div>
                             <div class="form-row">
-                                <div class="col">
-                                    <div class="form-group modern-form__form-group--padding-t"><textarea class="form-control input modern-form__form-control--textarea" placeholder="Message" style="font-family: 'EB Garamond', serif;"></textarea>
-                                        <div class="line-box">
-                                            <div class="line"></div>
+                                <div class="col-12 col-md-6" id="message-1" style="width: 480px;">
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend"><span class="input-group-text"><i class="fa fa-user-o"></i></span></div><input class="form-control" type="text" id="from-name-1" name="name" required="" placeholder="Full Name" style="font-family: 'EB Garamond', serif;"></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend"><span class="input-group-text"><i class="fa fa-envelope-o"></i></span></div><input class="form-control" type="text" id="from-email-1" name="email" required="" placeholder="Email Address" style="font-family: 'EB Garamond', serif;"></div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="col-12 col-sm-6 col-md-12 col-lg-6">
+                                            <div class="form-group">
+                                                <div class="input-group">
+                                                    <div class="input-group-prepend"><span class="input-group-text"><i class="fa fa-phone"></i></span></div><input class="form-control" type="text" id="from-phone-1" name="phone" required="" placeholder="Primary Phone" style="font-family: 'EB Garamond', serif;"></div>
+                                            </div>
                                         </div>
                                     </div>
+                                    <div class="form-group"><label for="from-comments" style="font-family: 'EB Garamond', serif;">Comments</label><textarea class="form-control" id="from-comments-1" name="comments" placeholder="Enter Comments" rows="5" style="font-family: 'EB Garamond', serif;"></textarea></div>
+                                    <div
+                                        class="form-group">
+                                        <div class="form-row">
+                                            <div class="col"><button class="btn btn-primary btn-block" type="submit" style="font-family: 'EB Garamond', serif;color: rgb(255,252,252);height: 40px;width: 100px;">Submit <i class="fa fa-chevron-circle-right"></i></button></div>
+                                        </div>
                                 </div>
                             </div>
-                            <div class="form-row">
-                                <div class="col text-center"><button class="btn btn-primary" data-bs-hover-animate="pulse" id="button1" type="button"><img style="width: 20px;height: 20px;transform: rotate(270deg) translateX(2px);" src="assets/img/arrowwhite.gif"><span style="font-family: 'EB Garamond', serif;"><strong>Submit&nbsp;</strong></span><img style="width: 20px;height: 20px;transform: rotate(90deg) translateX(-2px);" src="assets/img/arrowwhite.gif"></button></div>
-                            </div>
-                        </form>
-                    </div><a href="http://www.git.edu/"></a></div><a href="https://goo.gl/maps/GzzNyFcUN5nAPWF78"><button class="btn btn-primary" data-bs-hover-animate="pulse" id="button-1" type="button"><img style="width: 20px;height: 20px;transform: rotate(270deg) translateX(2px);" src="assets/img/arrowwhite.gif"><span style="font-family: 'EB Garamond', serif;"><strong>Location Of GIT</strong></span><img style="width: 20px;height: 20px;transform: rotate(90deg) translateX(-2px);" src="assets/img/arrowwhite.gif"></button></a></section>
-            <footer>
-                <div class="row" style="font-family: 'EB Garamond', serif;">
-                    <div class="col-sm-6 col-md-4 footer-navigation">
-                        <h3><a href="#"><span style="font-family: 'EB Garamond', serif;color: rgb(244,245,248);">IEEE</span><span style="font-family: 'EB Garamond', serif;color: rgb(34,77,206);">-GIT</span></a></h3>
-                        <p class="links"><a href="index.html" style="font-family: 'EB Garamond', serif;">Home</a><strong> ·  ·  ·  ·  · </strong><a href="contact-us.html" style="font-family: 'EB Garamond', serif;">Contact</a></p>
-                        <p class="company-name" style="font-family: 'EB Garamond', serif;">Team Xtreame © 2020</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 footer-contacts">
-                        <div style="font-family: 'EB Garamond', serif;"><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                            <p style="font-family: 'EB Garamond', serif;"><span class="new-line-span">Jyana Ganga,Udyambagh</span>Belgaum, Karnataka</p>
-                        </div>
-                        <div><i class="fa fa-phone footer-contacts-icon"></i>
-                            <p class="footer-center-info email text-left" style="font-family: 'EB Garamond', serif;"> +91 9999988888</p>
-                        </div>
-                        <div><i class="fa fa-envelope footer-contacts-icon"></i>
-                            <p> <a href="#" target="_blank" style="font-family: 'EB Garamond', serif;">webteamieeegit@gmail.com</a></p>
-                        </div>
+                    </form>
+                </div><a href="http://www.git.edu/"></a></div><a href="https://goo.gl/maps/GzzNyFcUN5nAPWF78"><button class="btn btn-primary" data-bs-hover-animate="pulse" id="button-1" type="button" style="padding-top: 6px;"><img style="width: 20px;height: 20px;transform: rotate(270deg) translateX(2px);" src="assets/img/arrowwhite.gif"><span style="font-family: 'EB Garamond', serif;"><strong>Location Of GIT</strong></span><img style="width: 20px;height: 20px;transform: rotate(90deg) translateX(-2px);" src="assets/img/arrowwhite.gif"></button></a></section>
+        <footer>
+            <div class="row" style="font-family: 'EB Garamond', serif;">
+                <div class="col-sm-6 col-md-4 footer-navigation">
+                    <h3><a href="#"><span style="font-family: 'EB Garamond', serif;color: rgb(244,245,248);">IEEE</span><span style="font-family: 'EB Garamond', serif;color: rgb(34,77,206);">-GIT</span></a></h3>
+                    <p class="links"><a href="index.html" style="font-family: 'EB Garamond', serif;">Home</a><strong> ·  ·  ·  ·  · </strong><a href="contact-us.html" style="font-family: 'EB Garamond', serif;">Contact</a></p>
+                    <p class="company-name" style="font-family: 'EB Garamond', serif;">Team Xtreame © 2020</p>
+                </div>
+                <div class="col-sm-6 col-md-4 footer-contacts">
+                    <div style="font-family: 'EB Garamond', serif;"><span class="fa fa-map-marker footer-contacts-icon"> </span>
+                        <p style="font-family: 'EB Garamond', serif;"><span class="new-line-span">Jyana Ganga,Udyambagh</span>Belgaum, Karnataka</p>
                     </div>
-                    <div class="clearfix"></div>
-                    <div class="col-md-4 footer-about">
-                        <p style="font-family: 'EB Garamond', serif;">Developed by IEEE-GIT</p>
-                        <p style="font-size: 16px;color: #f7faf7;font-family: 'EB Garamond', serif;">Web Development Board</p>
-                        <div class="social-links social-icons"><a href="https://www.facebook.com/IEEEGIT/"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a><a href="https://www.instagram.com/ieee_git_official/"><i class="fa fa-instagram"></i></a></div>
+                    <div><i class="fa fa-phone footer-contacts-icon"></i>
+                        <p class="footer-center-info email text-left" style="font-family: 'EB Garamond', serif;"> +91 9999988888</p>
+                    </div>
+                    <div><i class="fa fa-envelope footer-contacts-icon"></i>
+                        <p> <a href="#" target="_blank" style="font-family: 'EB Garamond', serif;">webteamieeegit@gmail.com</a></p>
                     </div>
                 </div>
-            </footer>
-        </div>
+                <div class="clearfix"></div>
+                <div class="col-md-4 footer-about">
+                    <p style="font-family: 'EB Garamond', serif;">Developed by IEEE-GIT</p>
+                    <p style="font-size: 16px;color: #f7faf7;font-family: 'EB Garamond', serif;">Web Development Board</p>
+                    <div class="social-links social-icons"><a href="https://www.facebook.com/IEEEGIT/"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a><a href="https://www.instagram.com/ieee_git_official/"><i class="fa fa-instagram"></i></a></div>
+                </div>
+            </div>
+        </footer>
+    </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -228,6 +236,7 @@
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/Animated-Type-Heading.js"></script>
     <script src="assets/js/Contact-Form-v2-Modal--Full-with-Google-Map.js"></script>
+    <script src="assets/js/Slick-Slider-2.js"></script>
 </body>
-//
+
 </html>
