--- a/slider.html
+++ b/slider.html
@@ -77,7 +77,7 @@
                         </div>
                         <div class="container" style="padding-top: 100px;">
                             <div class="photo-card">
-                                <div data-aos="fade-right" class="photo-background" style="background-image:url(&quot;assets/img/A2.png&quot;);"></div>
+                                <div data-aos="fade-right" class="photo-background" style="background-image:url(&quot;assets/img/2.jpeg&quot;);"></div>
                                 <div class="photo-details">
                                     <p data-aos="fade-left" data-aos-duration="200" data-aos-delay="450" style="font-family: 'EB Garamond', serif;">Global IEEE had allotted funds to conduct the “star program” in the year 2014-2015 for being one of the most active chapter in the region, using these funds we conducted motivational events in rural areas (i.e. the
                                         government schools).<br></p>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="container" style="padding-top: 100px;">
                             <div class="photo-card">
-                                <div data-aos="fade-right" class="photo-background" style="background-image:url(&quot;assets/img/A3.jpg&quot;);"></div>
+                                <div data-aos="fade-right" class="photo-background" style="background-image:url(&quot;assets/img/3.jpeg&quot;);"></div>
                                 <div class="photo-details">
                                     <p data-aos="fade-left" data-aos-duration="200" data-aos-delay="450" style="font-family: 'EB Garamond', serif;">For the year 2015-2016 Vardhana Kulkarni and Pranali Shinde from KLS GIT were selected as representatives for North Karnataka region.&nbsp;<br></p>
                                 </div>
@@ -94,7 +94,7 @@
                         </div>
                         <div class="container" style="padding-top: 100px;">
                             <div class="photo-card">
-                                <div data-aos="fade-right" class="photo-background" style="background-image:url(&quot;assets/img/A4.png&quot;);"></div>
+                                <div data-aos="fade-right" class="photo-background" style="background-image:url(&quot;assets/img/4.jpeg&quot;);"></div>
                                 <div class="photo-details">
                                     <p data-aos="fade-left" data-aos-duration="200" data-aos-delay="450" style="font-family: 'EB Garamond', serif;">Student Branch got seed amount in 2015-16 for IEEE Star program.<br></p>
                                 </div>
@@ -102,7 +102,7 @@
                         </div>
                         <div class="container" style="padding-top: 100px;">
                             <div class="photo-card">
-                                <div data-aos="fade-right" class="photo-background" style="background-image:url(&quot;assets/img/A5.jpg&quot;);"></div>
+                                <div data-aos="fade-right" class="photo-background" style="background-image:url(&quot;assets/img/5.jpeg&quot;);"></div>
                                 <div class="photo-details">
                                     <p data-aos="fade-left" data-aos-duration="200" data-aos-delay="450" style="font-family: 'EB Garamond', serif;">Three of our professors Dr. D.V.Kulkarni, Dr. V P Gejji and Prof. N.F.Deshpande were elected as senior members of IEEE.<br></p>
                                 </div>
