--- a/slider-2.html
+++ b/slider-2.html
@@ -71,16 +71,16 @@
                     </div>
                     <div class="carousel slide" data-ride="carousel" id="carousel-1">
                         <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/w1.jpeg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/w2.jpeg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/w3.jpeg" alt="Slide Image"></div>
+                            <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/u1.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/u2.jpg" alt="Slide Image"></div>
+      
                         </div>
                         <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button"
                                 data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
                         <ol class="carousel-indicators">
                             <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-1" data-slide-to="1"></li>
-                            <li data-target="#carousel-1" data-slide-to="2"></li>
+                            
                         </ol>
                     </div>
                 </div>
@@ -111,7 +111,8 @@
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/P2019.1.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="w-100 d-block" src="assets/img/P2019.2.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="P2019.3.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="P2019.5.jpg" alt="Slide Image"></div>
+                             <div class="carousel-item"><img class="w-100 d-block" src="P2019.7.jpg" alt="Slide Image"></div>
                         </div>
                         <div><a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button"
                                 data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
@@ -119,6 +120,7 @@
                             <li data-target="#carousel-2" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-2" data-slide-to="1"></li>
                             <li data-target="#carousel-2" data-slide-to="2"></li>
+                             <li data-target="#carousel-2" data-slide-to="3"></li>
                         </ol>
                     </div>
                 </div>
@@ -166,9 +168,9 @@
                     </div>
                     <div class="carousel slide" data-ride="carousel" id="carousel-7">
                         <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/1.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/3.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/2.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/3.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/2(1)(1).jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/2(1).jpg" alt="Slide Image"></div>
                         </div>
                         <div><a class="carousel-control-prev" href="#carousel-7" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-7" role="button"
                                 data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
@@ -205,7 +207,7 @@
                     <div class="carousel slide" data-ride="carousel" id="carousel-5">
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/Apployed.1.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/Apployed.2.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/Apployed.4.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="w-100 d-block" src="assets/img/Apployed.3.jpg" alt="Slide Image"></div>
                         </div>
                         <div><a class="carousel-control-prev" href="#carousel-5" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-5" role="button"
