--- a/slider-2.html
+++ b/slider-2.html
@@ -111,8 +111,8 @@
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/P2019.1.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="w-100 d-block" src="assets/img/P2019.2.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="P2019.5.jpg" alt="Slide Image"></div>
-                             <div class="carousel-item"><img class="w-100 d-block" src="P2019.7.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/P2019.5.jpg" alt="Slide Image"></div>
+                             <div class="carousel-item"><img class="w-100 d-block" src="assets/img/P2019.7.jpg" alt="Slide Image"></div>
                         </div>
                         <div><a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button"
                                 data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
@@ -169,8 +169,8 @@
                     <div class="carousel slide" data-ride="carousel" id="carousel-7">
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/3.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/2(1)(1).jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/2(1).jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/4.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/6.jpg" alt="Slide Image"></div>
                         </div>
                         <div><a class="carousel-control-prev" href="#carousel-7" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-7" role="button"
                                 data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
