--- a/features.html
+++ b/features.html
@@ -76,7 +76,7 @@
             <section>
                 <div class="container">
                     <section>
-                        <div class="row clearmargin clearpadding row-image-txt"><img data-aos="fade-right" data-aos-duration="700" data-aos-delay="250" src="assets/img/4.jpeg" style="height: 500px;width: 340.6px;padding: 20px;margin-right: px;margin-left: px;padding-right: 20px;padding-left: 20px;">
+                        <div class="row clearmargin clearpadding row-image-txt"><img data-aos="fade-right" data-aos-duration="700" data-aos-delay="250" src="assets/img/Ev1.jpeg" style="height: 500px;width: 340.6px;padding: 20px;margin-right: px;margin-left: px;padding-right: 20px;padding-left: 20px;">
                             <div class="col"
                                 style="width: 200px;padding-top: 20px;">
                                 <div class="row">
@@ -133,7 +133,7 @@
       <div class="col-md-4 on-hover">
           
         <div class="card border-0 mb-4">
-          <a href="https://www.instagram.com/p/B3Hp0AghR0D/?utm_source=ig_web_copy_link"><img class="card-img-top" src="assets/img/2.jpeg" alt="wrappixel kit"></a>
+          <a href="https://www.instagram.com/p/B3Hp0AghR0D/?utm_source=ig_web_copy_link"><img class="card-img-top" src="assets/img/Eve2.jpeg" alt="wrappixel kit"></a>
           <div class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">Oct<span class="d-block">3</span></div>
           <h5 class="font-weight-medium mt-3"><a class="text-decoration-none link"><p style="font-family: 'EB Garamond', serif;font-size: 18px">We present you an orientation program on "The art of writing a technical paper" by "Dr Shweta Goudar". This will be a golden opportunity for the participants and benefit them to get recognised at Global level and also play key role to win in upcoming Flagship event of KLS GIT, Avalanche'19.</p> </a></h5>
           <p class="mt-3"></p>
@@ -143,7 +143,7 @@
       <!-- Column -->
       <div class="col-md-4 on-hover">
         <div class="card border-0 mb-4">
-          <a href="https://www.instagram.com/p/B2lwUT-BYto/?utm_source=ig_web_copy_link"><img class="card-img-top" src="assets/img/3.jpeg" alt="wrappixel kit"></a>
+          <a href="https://www.instagram.com/p/B2lwUT-BYto/?utm_source=ig_web_copy_link"><img class="card-img-top" src="assets/img/Eve3.jpeg" alt="wrappixel kit"></a>
           <div class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">Sept<span class="d-block">29</span></div>
           <h5 class="font-weight-medium mt-3"><a class="text-decoration-none link"><p style="font-family: 'EB Garamond', serif;font-size: 18px">IEEEXtreme is a global challenge in which teams of IEEE Student members – advised and proctored by an IEEE member, and often supported by an IEEE Student Branch – compete in a 24-hour time span against each other to solve a set of programming problems.</p>
 
@@ -183,7 +183,7 @@
       <!-- Column -->
       <div class="col-md-4 on-hover">
         <div class="card border-0 mb-4">
-          <a href="www.paanchajanya2k19.git.edu"><img class="card-img-top" src="assets/img/5.jpeg" alt="wrappixel kit"></a>
+          <a href="www.paanchajanya2k19.git.edu"><img class="card-img-top" src="assets/img/Eve5.jpeg" alt="wrappixel kit"></a>
           <div class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">Feb<span class="d-block">23</span></div><p></p><p></p>
          <p style="font-family: 'EB Garamond', serif;font-size: 18px">Technical Treasure Hunt.</p>
             <p style="font-family: 'EB Garamond', serif;font-size: 18px">"Click on the Image to register!"</p>
