--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="container">
                     <div class="row row-fitur">
                         <div class="col-sm-4 col-md-4 waves-effect kolom-a" style="background-image:url(&quot;assets/img/bg3.png&quot;)">
-                            <div class="fitur-a"><img src="assets/img/g.png" style="height: 128px;width: 128px;"></div>
+                            <div class="fitur-a"><img src="assets/img/Home1.jpeg" style="height: 128px;width: 128px;"></div>
                             <div class="separator-fitur"></div>
                             <div>
                                 <h4 class="heading-fitur" style="font-family: 'EB Garamond', serif;"><strong>Workshops</strong></h4>
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <div class="col-sm-4 col-md-4 waves-effect kolom-b" style="background-image:url(&quot;assets/img/bg3.png&quot;)">
-                            <div class="fitur-a"><img src="assets/img/co.png" style="width: 128px;height: 128px;"></div>
+                            <div class="fitur-a"><img src="assets/img/Home2.jpeg" style="width: 128px;height: 128px;"></div>
                             <div class="separator-fitur"></div>
                             <div>
                                 <h4 class="heading-fitur" style="font-family: 'EB Garamond', serif;"><strong>Competations</strong></h4>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                         <div class="col-sm-4 col-md-4 waves-effect kolom-c" style="background-image:url(&quot;assets/img/bg3.png&quot;)">
-                            <div class="fitur-a"><img src="assets/img/s.png" style="width: 128px;"></div>
+                            <div class="fitur-a"><img src="assets/img/Home3.jpeg" style="width: 128px;"></div>
                             <div class="separator-fitur"></div>
                             <div>
                                 <h4 class="heading-fitur" style="font-family: 'EB Garamond', serif;"><strong>Seminars</strong></h4>
