--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="overlay" style="height: 400px;"></div>
             </header><img class="pulse animated infinite" id="logoimage1" src="assets/img/1.1.jpeg" style="text-align: right;opacity: 0.77;margin: 100px;">
             <h1 data-aos="fade-up" data-aos-duration="800" data-aos-delay="400" id="heading-1" style="color: rgb(8,9,9);font-family: 'EB Garamond', serif;font-size: 40px;padding-top: 0;"><strong>WELCOME</strong>&nbsp;TO</h1>
-            <h1 data-aos="fade-up" data-aos-duration="800" data-aos-delay="400" id="heading-2" style="color: rgb(3,3,3);font-family: 'EB Garamond', serif;">A global community to innovate for a better tomorrow and is a trusted voice for engineering and technology around the globe.</h1><a href="http://www.git.edu/"><button class="btn btn-primary" data-bs-hover-animate="pulse" id="button1" type="button"><img style="width: 20px;height: 20px;transform: rotate(270deg) translateX(2px);" src="assets/img/arrowwhite.gif"><span style="font-family: 'EB Garamond', serif;"><strong>Know  KLS's GIT</strong></span><img style="width: 20px;height: 20px;transform: rotate(90deg) translateX(-2px);" src="assets/img/arrowwhite.gif"></button></a>
+            <h1 data-aos="fade-up" data-aos-duration="800" data-aos-delay="400" id="heading-2" style="color: rgb(3,3,3);font-family: 'EB Garamond', serif;font-size: 24px">A global community to innovate for a better tomorrow and is a trusted voice for engineering and technology around the globe.</h1><a href="http://www.git.edu/"><button class="btn btn-primary" data-bs-hover-animate="pulse" id="button1" type="button"><img style="width: 20px;height: 20px;transform: rotate(270deg) translateX(2px);" src="assets/img/arrowwhite.gif"><span style="font-family: 'EB Garamond', serif;"><strong>Know  KLS's GIT</strong></span><img style="width: 20px;height: 20px;transform: rotate(90deg) translateX(-2px);" src="assets/img/arrowwhite.gif"></button></a>
             <h1
                 data-aos="fade-up" data-aos-duration="800" data-aos-delay="800" id="heading1" style="color: rgb(0,0,0);font-family: 'EB Garamond', serif;"><strong>Experience the joy of learning with IEEE-GIT</strong></h1>
                 <section class="card-section-imagia">
@@ -95,8 +95,8 @@
                             <div class="fitur-a"><img src="assets/img/Home2.jpg" style="width: 128px;height: 128px;"></div>
                             <div class="separator-fitur"></div>
                             <div>
-                                <h4 class="heading-fitur" style="font-family: 'EB Garamond', serif;"><strong>Competations</strong></h4>
-                                <p class="paragraf-fitur" style="font-size: 18px;color: rgb(11,11,11);font-family: 'EB Garamond', serif;"><strong>IEEE-GIT conducts many competitions during its technical fests.Some of the competitions are : Coding competations, Technical Treasure hunt etc. </strong></p>
+                                <h4 class="heading-fitur" style="font-family: 'EB Garamond', serif;"><strong>Competitions</strong></h4>
+                                <p class="paragraf-fitur" style="font-size: 18px;color: rgb(11,11,11);font-family: 'EB Garamond', serif;"><strong>IEEE-GIT conducts many competitions during its technical fests.Some of the competitions are : Coding competitions, Technical Treasure hunt etc. </strong></p>
                             </div>
                         </div>
                         <div class="col-sm-4 col-md-4 waves-effect kolom-c" style="background-image:url(&quot;assets/img/bg3.png&quot;)">
@@ -111,7 +111,7 @@
                 </div>
                 <section class="card-section-imagia">
                     <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="900" style="font-size: 32px;font-family: 'EB Garamond', serif;"><strong>OUR MENTORS</strong></h1>
-                    <h1 style="font-size: 18px;font-family: 'EB Garamond', serif;"><strong>Mentors guide us and support us to conduct different events.</strong></h1>
+                    <h1 style="font-size: 18px;font-family: 'EB Garamond', serif;">Mentors guide us and support us to conduct different events.</h1>
                     <h2></h2>
                 </section>
                 <section id="team" class="bg-light-gray" style="padding-bottom: 0;">
@@ -158,11 +158,11 @@
                         <div class="col-sm-6 col-md-4 footer-navigation">
                             <h3><a href="#"><span style="font-family: 'EB Garamond', serif;color: rgb(244,245,248);">IEEE</span><span style="font-family: 'EB Garamond', serif;color: rgb(34,77,206);">-GIT</span></a></h3>
                             <p class="links"><a href="index.html" style="font-family: 'EB Garamond', serif;">Home</a><strong> ·  ·  ·  ·  · </strong><a href="contact-us.html" style="font-family: 'EB Garamond', serif;">Contact</a></p>
-                            <p class="company-name" style="font-family: 'EB Garamond', serif;">Team Xtreame © 2020</p>
+                            <p class="company-name" style="font-family: 'EB Garamond', serif;">Team Xtreme © 2020</p>
                         </div>
                         <div class="col-sm-6 col-md-4 footer-contacts">
                             <div style="font-family: 'EB Garamond', serif;"><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                                <p style="font-family: 'EB Garamond', serif;"><span class="new-line-span">Jyana Ganga,Udyambagh</span>Belgaum, Karnataka</p>
+                                <p style="font-family: 'EB Garamond', serif;"><span class="new-line-span">Jnana Ganga,Udyambagh</span>Belgaum, Karnataka.</p>
                             </div>
                             <div><i class="fa fa-phone footer-contacts-icon"></i>
                                 <p class="footer-center-info email text-left" style="font-family: 'EB Garamond', serif;"> +91 9999988888</p>
