--- a/features.html
+++ b/features.html
@@ -149,7 +149,7 @@
 
 <p style="font-family: 'EB Garamond', serif;font-size: 18px">Official Registrations for the IEEEXtreme Programming Competition is now OPEN.</p>
 
-<p style="font-family: 'EB Garamond', serif;font-size: 18px">Register at: http://xtreme.vtools.ieee.org/</p>
+<p style="font-family: 'EB Garamond', serif;font-size: 18px">Register at: <a href=http://xtreme.vtools.ieee.org/></a></p>
 
               <p style="font-family: 'EB Garamond', serif;font-size: 18px">Last Date to Register: 26th sept 2019; 23:59:59 UTC</p></a></h5>
           <p class="mt-3"></p>
@@ -393,11 +393,11 @@ Register now !!!</p>
                     <div class="col-sm-6 col-md-4 footer-navigation">
                         <h3><a href="#"><span style="font-family: 'EB Garamond', serif;color: rgb(244,245,248);">IEEE</span><span style="font-family: 'EB Garamond', serif;color: rgb(34,77,206);">-GIT</span></a></h3>
                         <p class="links"><a href="index.html" style="font-family: 'EB Garamond', serif;">Home</a><strong> ·  ·  ·  ·  · </strong><a href="contact-us.html" style="font-family: 'EB Garamond', serif;">Contact</a></p>
-                        <p class="company-name" style="font-family: 'EB Garamond', serif;">Team Xtreame © 2020</p>
+                        <p class="company-name" style="font-family: 'EB Garamond', serif;">Team Xtreme © 2020</p>
                     </div>
                     <div class="col-sm-6 col-md-4 footer-contacts">
                         <div style="font-family: 'EB Garamond', serif;"><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                            <p style="font-family: 'EB Garamond', serif;"><span class="new-line-span">Jyana Ganga,Udyambagh</span>Belgaum, Karnataka</p>
+                            <p style="font-family: 'EB Garamond', serif;"><span class="new-line-span">Jnana Ganga,Udyambagh</span>Belgaum, Karnataka.</p>
                         </div>
                         <div><i class="fa fa-phone footer-contacts-icon"></i>
                             <p class="footer-center-info email text-left" style="font-family: 'EB Garamond', serif;"> +91 9999988888</p>
