--- a/slider-2.html
+++ b/slider-2.html
@@ -66,7 +66,7 @@
             <div id="box-1">
                 <div class="container" style="padding: 100px;">
                     <div class="block-heading">
-                        <h4 data-aos="fade-down" style="color: #212529;font-size: 32px;font-family: 'EB Garamond', serif;padding-bottom: 15px;"><strong>OUR GALLARY</strong></h4>
+                        <h4 data-aos="fade-down" style="color: #212529;font-size: 32px;font-family: 'EB Garamond', serif;padding-bottom: 15px;"><strong>OUR GALLERY</strong></h4>
                         <h2 class="text-info" style="color: rgb(9,8,8);font-family: 'EB Garamond', serif;padding-top: 20px;"><strong>Udaan 2020</strong></h2>
                     </div>
                     <div class="carousel slide" data-ride="carousel" id="carousel-1">
@@ -145,7 +145,7 @@
                 </div>
                 <div class="container" style="padding: 100px;">
                     <div class="block-heading">
-                        <h2 class="text-info" style="color: rgb(9,8,8);font-family: 'EB Garamond', serif;"><strong>Trigati 2018</strong></h2>
+                        <h2 class="text-info" style="color: rgb(9,8,8);font-family: 'EB Garamond', serif;"><strong>Trigarti 2018</strong></h2>
                     </div>
                     <div class="carousel slide" data-ride="carousel" id="carousel-9">
                         <div class="carousel-inner" role="listbox">
@@ -228,7 +228,7 @@
                         </div>
                         <div class="col-sm-6 col-md-4 footer-contacts">
                             <div style="font-family: 'EB Garamond', serif;"><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                                <p style="font-family: 'EB Garamond', serif;"><span class="new-line-span">Jyana Ganga,Udyambagh</span>Belgaum, Karnataka</p>
+                                <p style="font-family: 'EB Garamond', serif;"><span class="new-line-span">Jnana Ganga,Udyambagh</span>Belgaum, Karnataka.</p>
                             </div>
                             <div><i class="fa fa-phone footer-contacts-icon"></i>
                                 <p class="footer-center-info email text-left" style="font-family: 'EB Garamond', serif;"> +91 9999988888</p>
