--- a/slider-2.html
+++ b/slider-2.html
@@ -224,7 +224,7 @@
                         <div class="col-sm-6 col-md-4 footer-navigation">
                             <h3><a href="#"><span style="font-family: 'EB Garamond', serif;color: rgb(244,245,248);">IEEE</span><span style="font-family: 'EB Garamond', serif;color: rgb(34,77,206);">-GIT</span></a></h3>
                             <p class="links"><a href="index.html" style="font-family: 'EB Garamond', serif;">Home</a><strong> ·  ·  ·  ·  · </strong><a href="contact-us.html" style="font-family: 'EB Garamond', serif;">Contact</a></p>
-                            <p class="company-name" style="font-family: 'EB Garamond', serif;">Team Xtreame © 2020</p>
+                            <p class="company-name" style="font-family: 'EB Garamond', serif;">Team Xtreme © 2020</p>
                         </div>
                         <div class="col-sm-6 col-md-4 footer-contacts">
                             <div style="font-family: 'EB Garamond', serif;"><span class="fa fa-map-marker footer-contacts-icon"> </span>
